# ProtoBan

./: ProtoBan.code-workspace  ProtoBanDB  README.md  pyproject.toml  ruff.toml  run.sh
src/protoban/: cli.py  environment.py  get_logger.py
src/protoban/bot/: __init__.py  bot.py  discord_logging.py  settings.py
src/protoban/bot/commands/: __init__.py  _error_handler.py  ping.py
src/protoban/bot/commands/admin/: __init__.py  _group.py  ban_reason.py  logs_channel.py  stats.py  version.py
src/protoban/bot/events/: __init__.py  ban_delete.py  member_delete.py  started.py
src/protoban/bot/hooks/: __init__.py  permissions.py
src/protoban/data/: .gitignore  __init__.py  _locate.py
