[project]
name = 'discord-auto-ban-on-leave'
dynamic = ['version']
description = 'Automatically bans a discord users when they leave the server.'
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

# [project.scripts]
# discord_auto_ban_on_leave = "discord_auto_ban_on_leave.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/discord_auto_ban_on_leave/_version.py"
pattern = '__version__(?:: str)? *= *\"(?P<version>[^\"]+)\"'
